--- a/app/public/html/view.html
+++ b/app/public/html/view.html
@@ -38,6 +38,10 @@
           <th scope="col">Movie Name</th>
           <th scope="col">movie rated</th>
           <th scope="col">Duration</th>
+          <th scope="col">IMDB</th>
+          <th scope="col">Rotten Tomatoes</th>
+          <th scope="col">Metacritic</th>
+
 
         </tr>
       </thead>
