--- a/app/public/html/view.html
+++ b/app/public/html/view.html
@@ -103,7 +103,7 @@
   <script src="https://code.jquery.com/jquery.js"></script>
 
 
-  <script type="text/javascript" src="../js/view.js"></script>
+  <script type="text/javascript" src="/js/view.js"></script>
 
 </body>
 
